plugins {
    id 'groovy'
}

group = 'com.billwright'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

tasks.named('test') {
    useJUnitPlatform()
}

dependencies {
    implementation 'com.google.inject:guice:5.0.1'
    implementation 'org.springframework:spring-context:5.3.15'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'io.cucumber:cucumber-java:6.10.4'
    testImplementation 'io.cucumber:cucumber-groovy:6.10.4'
    testImplementation 'org.apache.groovy:groovy:4.0.3'
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

task cucumberCli() {
    println("REGISTER cucumberCli: This is executed during the configuration phase")
    dependsOn assemble, testClasses
    doLast {
        javaexec {
            main = "io.cucumber.core.cli.Main"
            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
            args = [
                    '--plugin', 'pretty',
                    '--snippets', 'camelcase',
                    '--plugin', 'html:target/cucumber-report.html',
                    '--glue', 'com.billwright.stepdefs',
                    'src/test/resources/features']
        }
    }
}




